fix: more small screen overflow fixes

--- a/src/App.css
+++ b/src/App.css
@@ -69,6 +69,8 @@ p {
 
 .mainBackground {
   background-color: var(--primary-dark);
+  min-width: 300px;
+  overflow: hidden;
 }
 
 .offsetBackground {
